Prevent game window selection on mobile

--- a/style.css
+++ b/style.css
@@ -163,12 +163,21 @@ h1 {
   min-height: 320px;
   overflow: visible;
   position: relative;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
   width: 100%;
 }
 
 canvas {
   display: block;
   height: 100%;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  touch-action: none;
+  user-select: none;
   width: 100%;
 }
 
